# swissTournament

./: .editorconfig  CMakeLists.txt  LICENSE  MainWindow.cpp  MainWindow.hpp  MainWindow.ui  README.md  main.cpp  match.cpp  match.hpp  player.cpp  player.hpp
